Crash on selecting "Background Scene" #61763

Closed
opened 2019-02-20 19:56:59 +01:00 by Petter Lundh · 14 comments

System Information
Operating system: Windows 10
Graphics card: GTX 980 Ti

Blender Version
Broken: 2.80, 9315cc443b1d-win64, blender2.8, 2018-02-20
Works: 2.79

Open Blender with any file. Create an extra Scene. Select the other scene as a "Background Scene" in the Scene tab. Blender crashes.

This happens on all my files with 2.8 and has done so for awhile. 2.79 works fine.

**System Information** Operating system: Windows 10 Graphics card: GTX 980 Ti **Blender Version** Broken: 2.80, 9315cc443b1d-win64, blender2.8, 2018-02-20 Works: 2.79 Open Blender with any file. Create an extra Scene. Select the other scene as a "Background Scene" in the Scene tab. Blender crashes. This happens on all my files with 2.8 and has done so for awhile. 2.79 works fine.

#62147 was marked as duplicate of this issue

#62147 was marked as duplicate of this issue

#62124 was marked as duplicate of this issue

#62124 was marked as duplicate of this issue

#61984 was marked as duplicate of this issue

#61984 was marked as duplicate of this issue
Author

Added subscriber: @PetterLundh

Added subscriber: @PetterLundh

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this on my end with the default cube scene.

Should you provide the exact steps and perhaps a .blend file that demonstrates the issue.

IE:

  1. Open the attached .blend file
  2. Set background scene
  3. crash.
I can't reproduce this on my end with the default cube scene. Should you provide the exact steps and perhaps a .blend file that demonstrates the issue. IE: 1. Open the attached .blend file 2. Set background scene 3. crash.
Author

Ah, I made a mistake. I thought it was the default startup scene, but it was pulling an old one from my %userdata% folder. It works fine again now with a completely fresh installation.

I'll attach the file here in case is still is of interest: startup.blend

Thanks for checking.

Ah, I made a mistake. I thought it was the default startup scene, but it was pulling an old one from my %userdata% folder. It works fine again now with a completely fresh installation. I'll attach the file here in case is still is of interest: [startup.blend](https://archive.blender.org/developer/F6679691/startup.blend) Thanks for checking.
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-22 10:36:41 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

I can reproduce the crash with that file.
Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555556bd545d in DEG::(anonymous namespace)::scene_remove_unused_view_layers (scene_cow=0x7fffcc8e6008, scene_cow=0x7fffcc8e6008,
    depsgraph=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:358
358		view_layer_eval->prev = view_layer_eval->next = NULL;
(gdb) bt
#0  0x0000555556bd545d in DEG::(anonymous namespace)::scene_remove_unused_view_layers (scene_cow=0x7fffcc8e6008, scene_cow=0x7fffcc8e6008,
    depsgraph=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:358
#1  DEG::(anonymous namespace)::scene_cleanup_view_layers (scene_cow=0x7fffcc8e6008, depsgraph=0x7fffcd7d9b08)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:393
#2  DEG::deg_expand_copy_on_write_datablock (depsgraph=0x7fffcd7d9b08, id_node=<optimized out>, node_builder=0x0, create_placeholders=<optimized out>)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:723
#3  0x0000555556bd57ba in DEG::deg_update_copy_on_write_datablock (depsgraph=0x7fffcd7d9b08, id_node=0x7fffe9715fc8)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:946
#4  0x0000555556bd4536 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (__args#0=<optimized out>, this=0x7fffe97161c0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:682
#5  DEG::deg_task_run_func (pool=0x7fffcc8c0008, taskdata=0x7fffe9716148, thread_id=0)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88
#6  0x0000555556bb5d23 in BLI_task_pool_work_and_wait (pool=0x7fffcc8c0008)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:897
#7  0x0000555556bb5e39 in BLI_task_pool_work_wait_and_reset (pool=pool@entry=0x7fffcc8c0008)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:925
#8  0x0000555556bd47ab in DEG::deg_evaluate_on_refresh (graph=graph@entry=0x7fffcd7d9b08)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:317
#9  0x0000555556bc0bc8 in DEG_evaluate_on_refresh (graph=graph@entry=0x7fffcd7d9b08)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_eval.cc:63
#10 0x000055555696b34a in BKE_scene_graph_update_tagged (depsgraph=depsgraph@entry=0x7fffcd7d9b08, bmain=bmain@entry=0x7fffcf7d3808)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1497
#11 0x000055555610d7d8 in wm_event_do_depsgraph (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341
#12 0x000055555610d875 in wm_event_do_refresh_wm_and_depsgraph (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366
#13 0x000055555611422a in wm_event_do_notifiers (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524
- 14 0x000055555610a1b8 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421
- 15 0x00005555560f4d33 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505

@Sergey seems like something funky is going on with the viewlayers?

I can reproduce the crash with that file. Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555556bd545d in DEG::(anonymous namespace)::scene_remove_unused_view_layers (scene_cow=0x7fffcc8e6008, scene_cow=0x7fffcc8e6008, depsgraph=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:358 358 view_layer_eval->prev = view_layer_eval->next = NULL; (gdb) bt #0 0x0000555556bd545d in DEG::(anonymous namespace)::scene_remove_unused_view_layers (scene_cow=0x7fffcc8e6008, scene_cow=0x7fffcc8e6008, depsgraph=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:358 #1 DEG::(anonymous namespace)::scene_cleanup_view_layers (scene_cow=0x7fffcc8e6008, depsgraph=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:393 #2 DEG::deg_expand_copy_on_write_datablock (depsgraph=0x7fffcd7d9b08, id_node=<optimized out>, node_builder=0x0, create_placeholders=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:723 #3 0x0000555556bd57ba in DEG::deg_update_copy_on_write_datablock (depsgraph=0x7fffcd7d9b08, id_node=0x7fffe9715fc8) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:946 #4 0x0000555556bd4536 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (__args#0=<optimized out>, this=0x7fffe97161c0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:682 #5 DEG::deg_task_run_func (pool=0x7fffcc8c0008, taskdata=0x7fffe9716148, thread_id=0) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88 #6 0x0000555556bb5d23 in BLI_task_pool_work_and_wait (pool=0x7fffcc8c0008) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:897 #7 0x0000555556bb5e39 in BLI_task_pool_work_wait_and_reset (pool=pool@entry=0x7fffcc8c0008) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:925 #8 0x0000555556bd47ab in DEG::deg_evaluate_on_refresh (graph=graph@entry=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:317 #9 0x0000555556bc0bc8 in DEG_evaluate_on_refresh (graph=graph@entry=0x7fffcd7d9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_eval.cc:63 #10 0x000055555696b34a in BKE_scene_graph_update_tagged (depsgraph=depsgraph@entry=0x7fffcd7d9b08, bmain=bmain@entry=0x7fffcf7d3808) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1497 #11 0x000055555610d7d8 in wm_event_do_depsgraph (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341 #12 0x000055555610d875 in wm_event_do_refresh_wm_and_depsgraph (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366 #13 0x000055555611422a in wm_event_do_notifiers (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524 - 14 0x000055555610a1b8 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421 - 15 0x00005555560f4d33 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ``` @Sergey seems like something funky is going on with the viewlayers?

Added subscriber: @EricImboden

Added subscriber: @EricImboden

Added subscribers: @sebastian_k, @capnm

Added subscribers: @sebastian_k, @capnm
Member

Added subscribers: @Vlad-Salmon, @lichtwerk

Added subscribers: @Vlad-Salmon, @lichtwerk

This issue was referenced by f5f0b97564

This issue was referenced by f5f0b97564cdb21c334ef736923905887111ddcf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61763
No description provided.