Fix T61763: Crash on selecting "Background Scene"

Memory optimization in dependency graph was using wrong view layer
for the scene which came via set.